add games pages and images

--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اليوم الوطني 94</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="navbar">
+        <div class="navbar-image">
+            <img src="https://traof.org.sa/assets/day-94/logo.png" />
+        </div>
+    </div>
+    <div class="main-container">
+        <div class="flag-image">
+            <img src="./flag.jpg" />
+        </div>
+        <div class="input-container">
+            <h1>هيّا استمتع والعب معنا</h1>
+            <p class="idea"><strong>فكرة اللعبة:</strong> اللعبة عبارة عن مستويين، في كل مستوى قم بالبحث خلال فترة من الزمن عن أي عنصر يمثل عن المملكة العربية السعودية.
+            </p>
+            <input id="name" type="text" placeholder="اكتب اسمك">
+            <button id="startButton">ابـدأ</button>
+            <p id="alertP"></p>
+        </div>
+
+    </div>
+    <!-- <button id="startButton" class="startButton">ابـدأ</button> -->
+
+    <!-- <div class="navbar">
+        <div class="navbar-image">
+            <img src="https://traof.org.sa/assets/day-94/logo.png" />
+        </div>
+    </div> -->
+
     <script src="./main.js"></script>
 </body>
+
 </html>
