enhance the code and design

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </div>
     <div class="main-container">
         <div class="flag-image">
-            <img src="./flag.jpg" />
+            <img src="./flag.png" />
         </div>
         <div class="input-container">
+            <br>
             <h1>هيّا استمتع والعب معنا</h1>
             <p class="idea"><strong>فكرة اللعبة:</strong> اللعبة عبارة عن مستويين، في كل مستوى قم بالبحث خلال فترة من الزمن عن أي عنصر يمثل عن المملكة العربية السعودية.
             </p>
@@ -28,13 +29,12 @@
         </div>
 
     </div>
-    <!-- <button id="startButton" class="startButton">ابـدأ</button> -->
 
-    <!-- <div class="navbar">
-        <div class="navbar-image">
-            <img src="https://traof.org.sa/assets/day-94/logo.png" />
-        </div>
-    </div> -->
+    <div class="footer">
+        <!-- <div class="footer-image"> -->
+            <img src="./footer2.png" />
+        <!-- </div> -->
+    </div>
 
     <script src="./main.js"></script>
 </body>
