enhance and update the code

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </div>
         <div class="input-container">
             <br>
-            <h1>هيّا استمتع والعب معنا</h1>
-            <p class="idea"><strong>فكرة اللعبة:</strong> اللعبة عبارة عن مستويين، في كل مستوى قم بالبحث خلال فترة من الزمن عن أي عنصر يمثل عن المملكة العربية السعودية.
+            <h1>هيّا العب معنا واستمتع</h1>
+            <p class="idea"><strong>فكرة اللعبة:</strong> اللعبة عبارة عن مستويين، في كل مستوى قم بالبحث في الصورة عن أي
+                عنصر مخفي يمثل عن المملكة العربية السعودية خلال فترة من الزمن.
             </p>
             <input id="name" type="text" placeholder="اكتب اسمك">
             <button id="startButton">ابـدأ</button>
@@ -31,11 +32,8 @@
     </div>
 
     <div class="footer">
-        <!-- <div class="footer-image"> -->
-            <img src="./footer2.png" />
-        <!-- </div> -->
+        <img src="./footer2.png" />
     </div>
-
     <script src="./main.js"></script>
 </body>
 
