--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="footer">
-        <img src="./footer2.png" />
+        <img src="./footer.png" />
     </div>
     <script src="./main.js"></script>
 </body>
