--- a/game.html
+++ b/game.html
@@ -23,24 +23,24 @@
                 <h1 id="timer" class="timer">30</h1>
             </div>
             <div class="game-image">
-                <img src="./gameImage.jpg" />
+                <img src="./images/gameImage.jpg" />
                 <div class="airplane-image" id="airplane-image">
-                    <img src="./saudiAirPlane.png" />
+                    <img src="./images/saudiAirPlane.png" />
                 </div>
                 <div class="clockTower-image" id="clockTower-image">
-                    <img src="./clockTower.png" />
+                    <img src="./images/clockTower.png" />
                 </div>
                 <div class="saudiFlag-image" id="saudiFlag-image">
-                    <img src="./saudiFlag.png" />
+                    <img src="./images/saudiFlag.png" />
                 </div>
                 <div class="almasmak-image" id="almasmak-image">
-                    <img src="./almasmak.png" />
+                    <img src="./images/almasmak.png" />
                 </div>
                 <div class="almamlakah-image" id="almamlakah-image">
-                    <img src="./almamlakah.png" />
+                    <img src="./images/almamlakah.png" />
                 </div>
                 <div class="palm-image" id="palm-image">
-                    <img src="./palm.png" />
+                    <img src="./images/palm.png" />
                 </div>
 
             </div>
@@ -52,12 +52,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="navbar">
-        <div class="navbar-image">
-            <img src="https://traof.org.sa/assets/day-94/logo.png" />
-        </div>
-    </div> -->
     <script src="./gameMain.js"></script>
 </body>
 
