--- a/game2.html
+++ b/game2.html
@@ -23,24 +23,24 @@
                 <h1 id="timer" class="timer">60</h1>
             </div>
             <div class="game-image">
-                <img src="./gameImage2.jpg" />
+                <img src="./images/gameImage2.jpg" />
                 <div class="camel-image" id="camel-image" >
-                    <img src="./camel.png" />
+                    <img src="./images/camel.png" />
                 </div>
                 <div class="dallah-image" id="dallah-image">
-                    <img src="./dallah.png" />
+                    <img src="./images/dallah.png" />
                 </div>
                 <div class="princess-image" id="princess-image">
-                    <img src="./princess.png" />
+                    <img src="./images/princess.png" />
                 </div>
                 <div class="sword-image" id="sword-image">
-                    <img src="./sword.png" />
+                    <img src="./images/sword.png" />
                 </div>
                 <div class="saudiLogo-image" id="saudiLogo-image">
-                    <img src="./saudiLogo.png" />
+                    <img src="./images/saudiLogo.png" />
                 </div>
                 <div class="saudiFlag2-image" id="saudiFlag2-image">
-                    <img src="./saudiFlag2.png" />
+                    <img src="./images/saudiFlag2.png" />
                 </div>
 
             </div>
