--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="main-container">
         <div class="flag-image">
-            <img src="./flag.png" />
+            <img src="./images/flag.png" />
         </div>
         <div class="input-container">
             <br>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="footer">
-        <img src="./footer.png" />
+        <img src="./images/footer.png" />
     </div>
     <script src="./main.js"></script>
 </body>
