--- a/resutl.html
+++ b/resutl.html
@@ -22,7 +22,7 @@
             <h2 id="winText" class="winText"></h2>
             <br>
             <h2 id="scoreText" class="scoreText"></h2>
-            <img src="./footerTowers.png"/>
+            <img src="./images/footerTowers.png"/>
         </div>
     </div>
     <script src="./resultMain.js"></script>
